code/python/AxiomaEquityOptimizer/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Axioma Equity Optimizer client library for Python

[![API Version](https://img.shields.io/badge/api-v1-blue)]()
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.AxiomaEquityOptimizer/0.8.17)](https://pypi.org/project/fds.sdk.AxiomaEquityOptimizer/v/0.8.17)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Engines Analytics through APIs.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1
- SDK version: 0.8.17
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.AxiomaEquityOptimizer==0.8.17
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.AxiomaEquityOptimizer==0.8.17
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.AxiomaEquityOptimizer
from fds.sdk.AxiomaEquityOptimizer.api import optimizations_api
from fds.sdk.AxiomaEquityOptimizer.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.AxiomaEquityOptimizer.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.AxiomaEquityOptimizer.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.AxiomaEquityOptimizer.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = optimizations_api.OptimizationsApi(api_client)
    id = "id_example" # str | from url, provided from the location header in the Run Optimization endpoint

    try:
        # Cancel Axioma optimization by id
        # example passing only required values which don't have defaults set
        api_instance.cancel_axioma_optimization_by_id(id)

    except fds.sdk.AxiomaEquityOptimizer.ApiException as e:
        print("Exception when calling OptimizationsApi->cancel_axioma_optimization_by_id: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Cancel Axioma optimization by id
    #     api_response, http_status_code, response_headers = api_instance.cancel_axioma_optimization_by_id_with_http_info(id)

    # except fds.sdk.AxiomaEquityOptimizer.ApiException as e:
    #     print("Exception when calling OptimizationsApi->cancel_axioma_optimization_by_id: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Cancel Axioma optimization by id
    #     async_result = api_instance.cancel_axioma_optimization_by_id_async(id)
    # except fds.sdk.AxiomaEquityOptimizer.ApiException as e:
    #     print("Exception when calling OptimizationsApi->cancel_axioma_optimization_by_id: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Cancel Axioma optimization by id
    #     async_result = api_instance.cancel_axioma_optimization_by_id_with_http_info_async(id)
    # except fds.sdk.AxiomaEquityOptimizer.ApiException as e:
    #     print("Exception when calling OptimizationsApi->cancel_axioma_optimization_by_id: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.AxiomaEquityOptimizer

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.AxiomaEquityOptimizer.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.AxiomaEquityOptimizer

configuration = fds.sdk.AxiomaEquityOptimizer.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.AxiomaEquityOptimizer

configuration = fds.sdk.AxiomaEquityOptimizer.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.AxiomaEquityOptimizer

configuration = fds.sdk.AxiomaEquityOptimizer.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*OptimizationsApi* | [**cancel_axioma_optimization_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizationsApi.md#cancel_axioma_optimization_by_id) | **DELETE** /analytics/engines/axp/v1/optimizations/{id} | Cancel Axioma optimization by id
*OptimizationsApi* | [**get_axioma_optimization_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizationsApi.md#get_axioma_optimization_by_id) | **GET** /analytics/engines/axp/v1/optimizations/{id} | Get Axioma optimization by id
*OptimizationsApi* | [**run_axioma_optimization**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizationsApi.md#run_axioma_optimization) | **POST** /analytics/engines/axp/v1/optimizations | Run Axioma optimization
*StrategyDocumentsApi* | [**get_axioma_equity_strategy_documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/StrategyDocumentsApi.md#get_axioma_equity_strategy_documents) | **GET** /analytics/engines/axp/v1/strategies/{path} | Get Axioma Equity strategy documents and sub-directories in a directory


## Documentation For Models

 - [AxiomaEquityOptimizationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/AxiomaEquityOptimizationParameters.md)
 - [DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/DocumentDirectories.md)
 - [OptimalPortfolio](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimalPortfolio.md)
 - [Optimization](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/Optimization.md)
 - [OptimizerAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizerAccount.md)
 - [OptimizerAccountOverrides](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizerAccountOverrides.md)
 - [OptimizerOptimalHoldings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizerOptimalHoldings.md)
 - [OptimizerOutputTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizerOutputTypes.md)
 - [OptimizerStrategy](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizerStrategy.md)
 - [OptimizerStrategyOverrides](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizerStrategyOverrides.md)
 - [OptimizerTradesList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/AxiomaEquityOptimizer/v1/docs/OptimizerTradesList.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.AxiomaEquityOptimizer.apis and fds.sdk.AxiomaEquityOptimizer.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.AxiomaEquityOptimizer.api.default_api import DefaultApi`
- `from fds.sdk.AxiomaEquityOptimizer.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.AxiomaEquityOptimizer
from fds.sdk.AxiomaEquityOptimizer.apis import *
from fds.sdk.AxiomaEquityOptimizer.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

